# git-onboard

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  git_onboard.py  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-app.yml
tests/: __init__.py  test_git_onboard.py
